refactor: dependences